fixed some spacing on homepage so you can see more of it above the fold

--- a/static/stylesheets/app.css
+++ b/static/stylesheets/app.css
@@ -8676,7 +8676,7 @@ margin-bottom:50px;
   color: #565656;
   font-weight: lighter;
   font-size: 30;
-  margin: 50px 0px 50px 0px;
+  margin: 30px 0px 50px 0px;
   text-align: center;
 }
 
@@ -8684,7 +8684,7 @@ margin-bottom:50px;
   margin-left: auto;
   display: block;
   margin-right: auto;
-  margin-top: 50px;
+  margin-top: 10px;
 }
 
 .facebook-box {
